--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css" />
-    <title>Namaste React!!!</title>
+    <title>Namaste Saaransh!!!</title>
 </head>
-<body>
+<body bgcolor="orange">
+    <h1>Hello this is react from Saaransh Bhoj!!</h1>
     <div id="root">
         <h1>this is previous entry!!1</h1>
     </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <h1>Hello this is Frontend development from Saaransh Bhoj!!</h1>
     
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
