--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <title>Namaste Saaransh!!!</title>
 </head>
 <body bgcolor="orange">
-    <h1>Hello this is react from Saaransh Bhoj!!</h1>
     <div id="root">
-        <h1>this is previous entry!!1</h1>
+        <h1>Not Rendered from app.js/!!</h1>
     </div>
-    <h1>Hello this is Frontend development from Saaransh Bhoj!!</h1>
-    
-    <script type="module" src="./app.js"></script>
+     <script type="module" src="./app.js"></script>
 </body>
 </html>
