--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./index.css" />
     <title>Namaste Saaransh!!!</title>
 </head>
-<body>
+<body class="html">
     <div id="root">
         <h1>Not Rendered from app.js/!!</h1>
     </div>
