--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root">
         <h1>Not Rendered from app.js/!!</h1>
     </div>
-     <script type="module" src="./app.js"></script>
+     <script type="module" src="./src/app.js"></script>
 </body>
 </html>
